fix icon on tablet

--- a/src/style.css
+++ b/src/style.css
@@ -14,11 +14,11 @@
 
 .top-icon {
   position: relative;
-  display: block;
+  display: flex;
   width: 60px;
   height: 60px;
   margin: 0 auto;
-  padding: 18px 20px;
+  padding: 20px;
   border-radius: 50%;
   margin-bottom: 30px;
   color: var(--ui-brand-color);
@@ -84,14 +84,11 @@
   }
 
   &__item {
-    max-width: 310px;
     margin-top: 20px;
-    flex-direction: row;
     margin-left: auto;
     margin-right: auto;
 
     @media (min-width: 992px) {
-      max-width: none;
       justify-content: flex-start;
     }
   }
@@ -101,9 +98,12 @@
     height: 48px;
     padding: 0;
     margin-bottom: 0;
-    margin-right: 30px;
     color: var(--ui-brand-color);
     background: none;
+
+    @media (min-width: 768px) {
+      margin-right: 30px;
+    }
 
     svg {
       max-width: 100%;
